Fixed: overlap discription with project image

--- a/src/components/Work/ProjectSection/ProjectSection.scss
+++ b/src/components/Work/ProjectSection/ProjectSection.scss
@@ -16,7 +16,7 @@
         width: 60%;
         height: 400px;
         overflow: hidden;
-
+        z-index: 1;
         img {
             width: 100%;
             height: 100%;
@@ -49,7 +49,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: right;
-
+        z-index: 2;
         h4 {
             color: red;
 
